--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"server": "nodemon backend/server.js",
 		"client": "npm start --prefix frontend",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+		"render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"repository": {
 		"type": "git",
@@ -28,6 +28,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.6.6",
+		"nodemon": "^2.0.20",
 		"validator": "^13.7.0"
 	}
 }
